--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile
-    container_name: project
+    container_name: project_${PROJECT_NAME}
     restart: always
     tty: true
     environment:
@@ -22,7 +22,7 @@ services:
   #Nginx Service
   webserver:
     image: nginx:alpine
-    container_name: project-webserver
+    container_name: project-webserver_${PROJECT_NAME}
     restart: always
     tty: true
     ports:
@@ -38,7 +38,7 @@ services:
   db:
     platform: linux/x86_64
     image: mysql:8.0.17
-    container_name: project-db
+    container_name: project-db_${PROJECT_NAME}
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     tty: true
@@ -58,7 +58,7 @@ services:
   adminer:
     image: adminer:latest
     restart: unless-stopped
-    container_name: project-adminer
+    container_name: project-adminer_${PROJECT_NAME}
     ports:
       - 8800:8080
 
