--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,8 @@ services:
     container_name: project-adminer
     ports:
       - 8800:8080
+    networks:
+      - laravel-network
 
 #Docker Networks
 networks:
